--- a/public/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.html
+++ b/public/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html class="pl">
 	<head>
 		<title>Pattern Lab</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width" />
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700&text=ÄÖäö' rel='stylesheet' type='text/css'>
-		<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
+        <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+        <link href="http://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet" />
 
 		<link rel="stylesheet" href="../../css/style.css?1400569590" media="all" />
 
@@ -74,7 +74,7 @@
 									<input type="submit" name="ctl00$btnLogin" value="OK" onclick="javascript:WebForm_DoPostBackWithOptions(new WebForm_PostBackOptions(&quot;ctl00$btnLogin&quot;, &quot;&quot;, true, &quot;Login&quot;, &quot;&quot;, false, false))" id="btnLogin" tabindex="3" title="Syötä käyttäjätunnus sekä salasana niille varattuihin kenttiin ja klikkaa OK-nappia,minkä jälkeen siirryt kirjautuneen käyttäjän etusivunäkymään. " class="ctl-btn">
 									<div id="loginProgess" class="update-progress" style="visibility:hidden;display:block;" role="status" aria-hidden="true">
 
-											<img src="img/ajax-loader.gif" id="imgLoginLoader" alt="...">
+											<img src="../../images/ajax-loader.gif" id="imgLoginLoader" alt="...">
 
 					</div>
 
@@ -111,7 +111,7 @@
 									<input type="submit" name="ctl00$btnPasswordRecoverSend" value="Jatka" onclick="javascript:WebForm_DoPostBackWithOptions(new WebForm_PostBackOptions(&quot;ctl00$btnPasswordRecoverSend&quot;, &quot;&quot;, true, &quot;PasswordRecoverSend&quot;, &quot;&quot;, false, false))" id="btnPasswordRecoverSend" title="Klikkaamalla Jatka-nappia palvelu lähettää sinulle sähköpostiisi linkin, jonka kautta saat uuden salasanan." class="ctl-btn">
 									<div id="passwordRecoverProgress" class="update-progress" style="visibility:hidden;display:block;" role="status" aria-hidden="true">
 
-											<img src="img/ajax-loader.gif" id="imgPasswordRecoverLoader" alt="...">
+											<img src="../../images/ajax-loader.gif" id="imgPasswordRecoverLoader" alt="...">
 
 					</div>
 									<span id="cvEmailFieldDoesntExistsValidator" class="password-recover-validation" style="color:Red;display:none;"></span>
@@ -140,7 +140,7 @@
 									<input type="submit" name="ctl00$btnRegistration" value="Rekisteröidy" onclick="javascript:WebForm_DoPostBackWithOptions(new WebForm_PostBackOptions(&quot;ctl00$btnRegistration&quot;, &quot;&quot;, true, &quot;Registration&quot;, &quot;&quot;, false, false))" id="btnRegistration" title="Syötä sähköpostiosoitteesi sille varattuun kenttään ja klikkaa Rekisteröidy-painiketta. Palvelu lähettää sähköpostiisi vahvistusviestin, joka sisältää linkin rekisteröitymisen viimeistelemiseksi." class="ctl-btn">
 									<div id="emailValidationProgress" class="update-progress" style="visibility:hidden;display:block;" role="status" aria-hidden="true">
 
-											<img src="img/ajax-loader.gif" id="imgRegistrationLoader" alt="...">
+											<img src="../../images/ajax-loader.gif" id="imgRegistrationLoader" alt="...">
 
 					</div>
 									<span id="cvRegistrationEmail" class="registration-validation" style="color:Red;display:none;"></span>
@@ -238,8 +238,318 @@
 			</div>
 		</section>
 	</header>
-	<!-- End .header -->	<div role="main">
-
+	<!-- End .header -->	
+	<div role="main">
+		<div class="block">
+			<img src="../../images/fpo_16x9.png" alt="Taustakuva" />
+		</div>
+		<div class="admin-tools">
+			<h3>
+				Tietojen ylläpito
+			</h3>
+			<div class="btn-group">
+				<input class="btn-otk" type="submit" value="Muokkaa perustietoja">
+				<input class="btn-otk" type="submit" value="Kirjoita yhteenveto">
+				<input class="btn-otk" type="submit" value="Lisää kieliversio">
+				<input class="btn-otk" type="submit" value="Osallistumisraportti">
+			</div>
+		</div>
+		<div class="hanke-details">
+			<h1>Hankkeen nimi</h1>
+			<div class="fadeout">
+				<p>Hankkeen kuvausteksti tänne. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+				<p>Hankkeen johdanto tähän. Nullam varius, metus sed elementum bibendum, neque urna suscipit libero, nec vulputate ipsum metus ut felis. Curabitur tincidunt aliquet nulla, cursus elementum ante molestie sit amet. Duis dictum leo in auctor faucibus. Morbi et adipiscing magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed arcu libero, elementum vitae ante in, ultricies tristique orci. Donec scelerisque vehicula odio ut semper. Ut eu odio quis risus varius consectetur in at ante. Cras lacinia urna scelerisque, auctor sapien a, pulvinar massa. Integer ut mollis odio, et mattis mi. Nunc vel condimentum mauris. Integer porta lectus vel tellus suscipit semper.</p>
+				<p class="read-more"><a href="">Lue lisää</a></p>
+			</div>
+			<div class="some-buttons">
+				TODO: SOME_LINKS_HERE
+			</div>
+			<div>
+				TODO: Näiden leiskat?
+				<p>Aikataulu: <span class="date">23.10.2012–31.12.2014</span></p>
+				<p>Tila: <span class="state">Käynnissä</span></p>
+			</div>
+		</div>
+		<div class="gantt fadeout">
+			<img id="chartHankeGantt"
+				src="../../images/fpo_square.png"
+				alt="Gantt-kuva">
+			<p class="read-more"><a href="">Lue lisää</a></p>
+		</div>
+		<div class="invitation">
+            <img src="../../images/favicon_32x32.jpg">
+			<h3>
+				Kutsu muita osallistumaan
+			</h3>
+			<p>Kenelle<small>lisää käyttäjänimiä tai sähköpostiosoitteita</small></p>
+			<input type="text">
+			<p>Viesti<small>valinnainen viesti sähköpostikutsuun</small></p>
+			<textarea style="height: 70px;" cols="20" rows="2"></textarea>
+			<input type="submit" value="Lähetä kutsu">
+			<div class="sidebar-form-errors">
+			</div>
+		</div>
+		<div id="showParticipations" class="participations">
+			<h2 class="ongoing">
+				Menossa olevat osallistumiset
+			</h2>
+			<div class="icon-lift participation">
+				<div class="count-container">
+					<span class="icon-span icon-comment"></span>
+					<a href="//www.foo.bar">17</a>
+				</div>
+				<a class="icon-lift-link" href="//www.foo.bar">Ympäristön hyvinvointi - miten sitä voidaan...</a>
+				<span class="date">26.5. asti</span>
+			</div>
+			<div class="icon-lift participation">
+				<div class="count-container">
+					<span class="icon-span icon-comment"></span>
+					<a href="//www.foo.bar">24</a>
+				</div>
+				<a class="icon-lift-link" href="//www.foo.bar">Kaupungin asukkaiden hyvinvointi ja osallistu...</a>
+				<span class="date">26.5. asti</span>
+			</div>
+			<div class="icon-lift participation">
+				<div class="count-container">
+					<span class="icon-span icon-comment"></span>
+					<a href="//www.foo.bar">17</a>
+				</div>
+				<a class="icon-lift-link" href="//www.foo.bar">Miten nyt kerättävä rahoitus tulisi sijoittaa?</a>
+				<span class="date">26.5. asti</span>
+			</div>
+			<div class="icon-lift participation">
+				<div>
+					<span class="icon-span icon-add"></span>
+					<a id="btnAddParticipation">Luo uusi osallistuminen</a>
+				</div>
+				<span class="date">Voit luoda uusi osallistumistapoja</span>
+			</div>
+		</div>
+		<div id="addParticipations" class="participations" style="display: none;">
+			<h2 class="create">
+				TODO: "Luo uusi osallistuminen"-näkymä tähän
+			</h2>
+			<div class="icon-lift participation">
+				<a href="#">
+					<span class="icon">Kysely kuva</span>
+					<p>Kysely</p>
+				</a>
+				<span>Kysely lorem ipsum</span>
+			</div>
+			<div class="icon-lift participation">
+				<a href="#">
+					<span class="icon">Gallup kuva</span>
+					<p>Gallup</p>
+				</a>
+				<span>Gallup lorem ipsum</span>
+			</div>
+			<div class="icon-lift participation">
+				<a href="#">
+					<span class="icon">Keskustelu kuva</span>
+					<p>Keskustelu</p>
+				</a>
+				<span>Keskustelu lorem ipsum</span>
+			</div>
+			<div class="icon-lift cancel">
+				<a id="btnCancelParticipation">
+					<span class="icon">X</span>
+					<p>Palaa osallistumislistaan</p>
+				</a>
+			</div>
+		</div>
+		<div>
+			<div class="helper-container">
+				<span class="icon-help h3" title="Lorem ipsum" placement="top">Hankkeen osallistujat</span>
+				<p class="helper-text small is-vishidden">Lorem ipsum</p>
+			</div>
+			<div class="fadeout">
+				<table class="table-borderless">
+					<thead>
+						<tr>
+							<td></td>
+							<td>
+								Seuraa
+								<span></span>
+							</td>
+							<td>
+								On osallistunut
+								<span></span>
+							</td>
+							<td>
+								Vastuuhenkilö
+								<span></span>
+							</td>
+							<td>
+								Ohjaaja
+								<span></span>
+							</td>
+							<td>
+								Kutsuttu
+								<span></span>
+							</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td class="left">
+								<a href="#">Mikko Mallikas</a>
+							</td>
+							<td></td>
+							<td>
+								X
+							</td>
+							<td></td>
+							<td>
+								X
+							</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="left">
+								<a href="#">Matti Meikäläinen</a>
+							</td>
+							<td>
+								X
+							</td>
+							<td>
+								X
+							</td>
+							<td>
+								X
+							</td>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="left">
+								<a href="#">Jaska Jokunen</a>
+							</td>
+							<td>
+								X
+							</td>
+							<td>
+								X
+							</td>
+							<td>
+								X
+							</td>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="left">
+								<a href="#">Oskari Olematon</a>
+							</td>
+							<td></td>
+							<td>
+								X
+							</td>
+							<td>
+								X
+							</td>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="left">
+								<a href="#">David Hasselhoff</a>
+							</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td>
+								X
+							</td>
+						</tr>
+					</tbody>
+				</table>
+				<p class="read-more"><a href="">Lue lisää</a></p>
+			</div>
+		</div>
+		<div class="hanke-info">
+			<h2>
+				<a id="Info">
+					Perustiedot
+				</a>
+			</h2>
+			<div class="fadeout">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum velit sed nunc ultrices tincidunt. In nulla orci, lacinia at placerat non, consequat nec enim. Phasellus dignissim elit at porttitor elementum. Aliquam felis nisi, gravida sed augue at, posuere consectetur nunc. Nulla varius tempor massa sed luctus. Mauris ornare sollicitudin nulla, mollis convallis enim porta nec. Nulla non mauris eleifend, accumsan lectus id, ultrices massa. Etiam dictum ligula ac dui venenatis semper. Donec congue libero vitae neque dignissim pretium. Maecenas lacinia ultricies lorem, id vulputate turpis interdum a. Nulla ac orci elit.</p>
+				<p class="read-more"><a href="">Lue lisää</a></p>
+			</div>
+			<table class="table-borderless">
+				<tbody>
+					<tr>
+						<th>Vastuujärjestö/-henkilö</th>
+						<td colspan="2">Lorem Ipsum</td>
+					</tr>
+					<tr>
+						<th>Hanke luotu</th>
+						<td colspan="2"><span class="date">23.10.2012</span><a href="#">Mikko Mallikas</a></td>
+					</tr>
+					<tr>
+						<th>Hanke muokattu</th>
+						<td colspan="2"><span class="date">3.4.2014 8:38:05</span><a href="#">Mikko Mallikas</a></td>
+					</tr>
+					<tr>
+						<th>Liitteet</th>
+						<td class="table-cell-list">
+							<h4>Nimi</h4>
+							<a href="#">test2.txt</a>
+						</td>
+						<td class="table-cell-list">
+							<h4>Kuvaus</h4>
+							<p>Liitteen kuvausteksti</p>
+						</td>
+					</tr>
+					<tr>
+						<th>Linkit</th>
+						<td>
+							<ul>
+								<li><a href="#">Google</a></li>
+							</ul>
+						</td>
+				</tbody>
+			</table>
+			<div class="locations">
+				<div class="helper-container">
+					<span class="icon-help h4" title="Lorem ipsum" placement="top">Asiasanat</span>
+					<p class="helper-text small is-vishidden">Lorem ipsum</p>
+				</div>
+				<ul class="keywords">
+					<li>
+						aapasuot
+					</li>
+					<li>
+						afrikaanerit
+					</li>
+					<li>
+						afrikaansin kieli
+					</li>
+					<li>
+						eurooppaosuuskunnat
+					</li>
+					<li>
+						Haagin lastensuojelusopimus
+					</li>
+					<li>
+						sivutyö
+					</li>
+					<li>
+						tietoarkistot
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="project-analysis">
+			<h2>
+				Yhteenveto
+			</h2>
+			<div class="fadeout">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum velit sed nunc ultrices tincidunt. In nulla orci, lacinia at placerat non, consequat nec enim. Phasellus dignissim elit at porttitor elementum. Aliquam felis nisi, gravida sed augue at, posuere consectetur nunc. Nulla varius tempor massa sed luctus. Mauris ornare sollicitudin nulla, mollis convallis enim porta nec. Nulla non mauris eleifend, accumsan lectus id, ultrices massa. Etiam dictum ligula ac dui venenatis semper. Donec congue libero vitae neque dignissim pretium. Maecenas lacinia ultricies lorem, id vulputate turpis interdum a. Nulla ac orci elit. </p>
+				<p class="read-more"><a href="">Lue lisää</a></p>
+			</div>
+		</div>
 	</div><!--End role=main-->
 	<!-- Begin Footer -->
 	<footer class="footer" role="contentinfo">
@@ -254,7 +564,7 @@
 							<ul>
 								<li>
 									<a href="http://www.kansalaisaloite.fi">
-									<img alt="Kansalaisaloite" border="0" height="24" src="/download/noname/{4137A405-E01A-4561-8098-EED9EDE785C0}/11148" width="24">
+									<img alt="Kansalaisaloite" border="0" height="24" src="" width="24">
 									<span>kansalaisaloite.fi</span>
 									</a>
 								</li>
@@ -268,19 +578,19 @@
 		<ul>
 		<li>
 		<a href="http://www.facebook.com/otakantaa" target="_blank">
-		<img src="/download/noname/{7E30D163-A79B-42FB-A352-F72284323556}/11154" height="24" width="24">
+		<img src="" height="24" width="24">
 		<span>Facebook</span>
 		</a>
 		</li>
 		<li>
 		<a href="http://www.twitter.com/otakantaa" target="_blank">
-		<img src="/download/noname/{31DA1493-41F7-4A2D-A2D2-7E2E8A04B624}/11159" height="24" width="24">
+		<img src="" height="24" width="24">
 		<span>Twitter</span>
 		</a>
 		</li>
 		<li>
 		<a href="http://www.youtube.com/user/OikeusministerioDKY" target="_blank">
-		<img src="/download/noname/{5CE2EF13-925F-49F0-A4EA-FB9E6E9F55D4}/11158" height="24" width="24">
+		<img src="" height="24" width="24">
 		<span>Youtube</span>
 		</a>
 		</li>
@@ -405,9 +715,19 @@
 		</footer>		</div>
 	</footer>
 	<!-- End Footer --></div>	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js"></script>
 	<script type="text/javascript" src="../../js/plugins.min.js"></script>
 	<script type="text/javascript" src="../../js/main.min.js"></script>
+    <script>
+        $("#btnAddParticipation").click(function () {
+            $("#showParticipations").hide();
+            $("#addParticipations").show();
+        });
+        $("#btnCancelParticipation").click(function () {
+            $("#showParticipations").show();
+            $("#addParticipations").hide();
+        });
+    </script>
 	<!--DO NOT REMOVE-->
 		
 	<script>
